--- a/PageChiffre.html
+++ b/PageChiffre.html
@@ -14,11 +14,11 @@
         </div>
        
         <div id="Navigation">
-                <a id="Pageactuelle" href="#">Accueil</a>
+                <a href="#">Accueil</a>
                 <a href="#">Présentation de l'entreprise</a>
                 <a href="#">En ce moment</a>
                 <a href="#">Economie</a>
-                <a href="#">Chiffres</a>
+                <a id="Pageactuelle" href="#">Chiffres</a>
         </div>
     </header>
 
