--- a/PageChiffre.html
+++ b/PageChiffre.html
@@ -65,7 +65,7 @@
                 </ul>
             </div>
             <div class="item">
-                <h3>Jeux les plus télécharger développés par Arkane Studio pour Console et PC</h3>
+                <h3>Jeux les plus téléchargés développés par Arkane Studio pour Console et PC</h3>
                 <li>DeathLoop : Plus de <b>5 Millions</b> de vente (sortie en 2021) </li>
                 <li>Arx Fatalis : <b>500 000</b> de vente (Premier Jeu du studio Arkane sortie en 2002)</li>
                 <li>Prey : <b>1.5 Millions</b> de vente (sortie en 2017)</li>
