--- a/PageChiffre.html
+++ b/PageChiffre.html
@@ -90,9 +90,9 @@
             </iframe>
         </div>
         <div>
-            <a class="Reseau" href="https://www.facebook.com/ArkaneStudios/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/b/b9/2023_Facebook_icon.svg" width="50px"></a>
-            <a class="Reseau" href="https://x.com/arkanestudios" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/e/e6/Twitter-new-logo.jpg" width="50px"></a>
-            <a class="Reseau" href="https://www.linkedin.com/company/28338/" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" width="50px"></a>
+            <a class="Reseau" href="Logo Facebook.png" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/b/b9/2023_Facebook_icon.svg" width="50px"></a>
+            <a class="Reseau" href="Logo X.jpg" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/e/e6/Twitter-new-logo.jpg" width="50px"></a>
+            <a class="Reseau" href="Logo Linkedin.png" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" width="50px"></a>
         </div>
     </footer>
 
