Ajout titre et type Article Moment
Ajout d'un titre + Ajout d'un type d'article

--- a/PageEnCeMoment.html
+++ b/PageEnCeMoment.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>En ce moment</title>
     <link rel="stylesheet" href="styles_moment.css">
+    <link rel="javascript" href="js_moments.js">
 </head>
 <body>
     <header id="Bandeau_haut">
@@ -20,6 +21,24 @@
                 <a href="#">Chiffres</a>
         </div>
     </header>
+
+
+    <section id="Titre">
+        <h1>En ce moment</h1>
+        <h3>Sur cette page vous retrouverez les dernières informations d'Arkane sous forme d'article ci dessous</h4>
+    </section>
+
+    <section id="Contenu">
+        <div id="Article">
+            <div class="article">
+                <div class="texte">
+                    <h2>Le prochain jeu d'Arkane</h2>
+                    <p>blablablablablablablablablabla </p>
+                </div>
+            </div>
+        </div>
+
+    </section>
 
 
 
