Mise à jour page en ce moment
Mise à jour avec nouvel "article"

--- a/PageEnCeMoment.html
+++ b/PageEnCeMoment.html
@@ -30,9 +30,15 @@
 
     <section id="Contenu">
         <div id="Article">
-            <div class="article">
+            <div class="article" id="article1">
                 <div class="texte">
                     <h2>Le prochain jeu d'Arkane</h2>
+                    <p>blablablablablablablablablabla </p>
+                </div>
+            </div>
+            <div class="article" id="article2">
+                <div class="texte">
+                    <h2>Fermeture des serveurs RedFall !</h2>
                     <p>blablablablablablablablablabla </p>
                 </div>
             </div>
