--- a/PageChiffre.html
+++ b/PageChiffre.html
@@ -22,15 +22,10 @@
         </div>
     </header>
 
-    <div class="Page">
-        <h1 id="Slogan_Page"> Arkane Studios, vingt ans de jeux vidéo </h1>
-    
-        <br/>
-
-        <div class="column">
-        
-        </div>
-
+    <h1>
+        <p> Les chiffres d'Arkane Studios, vingt ans de jeux vidéo</p>
+    </h1>
+    <br>
         <div class="container">
             <div class="item">
                 <h3>Récompenses Jeux et Studio</h3>
@@ -41,11 +36,9 @@
                     <li><b>Deux oscars</b> du jeu vidéo pour Arkane Studio</li>
                 </ul>
             </div>
-
             <div class="item">
                 <h3>Effectifs</h3>
                 <p>Arkane Studio compte en 2022, 255 salariés</p> 
-
             </div>
             <div class="item">
                 <h3>Chiffres Economies</h3>
@@ -65,14 +58,9 @@
                 </ul>
             </div>
             <div class="item">
-                <h3>Jeux les plus téléchargés développés par Arkane Studio pour Console et PC</h3>
-                <li>DeathLoop : Plus de <b>5 Millions</b> de vente (sortie en 2021) </li>
-                <li>Arx Fatalis : <b>500 000</b> de vente (Premier Jeu du studio Arkane sortie en 2002)</li>
-                <li>Prey : <b>1.5 Millions</b> de vente (sortie en 2017)</li>
-                <li>Dishonored 2 : <b>2 Millions</b> de vente (sortie en 2016)</li>
-            </div> 
+                <P><b>Avis Positifs Steam</b></P>
+            </div>
         </div>
-    </div>
 
     <footer>
         <div id="copyright">
