--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
        
         <div id="Navigation">
                 <a id="Pageactuelle" href="#">Accueil</a>
-                <a href="#">Présentation de l'entreprise</a>
+                <a href="/PagePresentation">Présentation de l'entreprise</a>
                 <a href="/PageEnCeMoment.html">En ce moment</a>
                 <a href="#">Economie</a>
                 <a href="/PageChiffre">Chiffres</a>
