--- a/PagePresentation.html
+++ b/PagePresentation.html
@@ -37,7 +37,7 @@
         <div id="copyright">
             <img src="Logo.png" alt="Logo" width="100" height="50">
             <br>
-            &copy; 2024 Mathias DUMAIN
+            &copy; 2024 Owen HETRU
         </div>
     
         <div>
