--- a/PageEnCeMoment.html
+++ b/PageEnCeMoment.html
@@ -29,6 +29,7 @@
     </section>
 
     <section id="Contenu">
+        
         <div id="Article">
             <div class="article" id="article1">
                 <div class="texte">
@@ -42,6 +43,9 @@
                     <p>blablablablablablablablablabla </p>
                 </div>
             </div>
+        </div>
+        <div id="Image"></div>
+            <img src="/soon.png">
         </div>
 
     </section>
@@ -69,9 +73,9 @@
             </iframe>
         </div>
         <div>
-            <a class="Reseau" href="Logo Facebook.png" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/b/b9/2023_Facebook_icon.svg" width="50px"></a>
-            <a class="Reseau" href="Logo X.jpg" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/e/e6/Twitter-new-logo.jpg" width="50px"></a>
-            <a class="Reseau" href="Logo Linkedin.png" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" width="50px"></a>
+            <a class="Reseau" href="https://www.facebook.com/ArkaneStudios/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/b/b9/2023_Facebook_icon.svg" alt="Facebook Arkane Studio" width="50"></a>
+            <a class="Reseau" href="https://www.facebook.com/ArkaneStudios/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/e/e6/Twitter-new-logo.jpg" alt="Facebook Arkane Studio" width="50"></a>
+            <a class="Reseau" href="https://www.linkedin.com/company/arkane-studios/" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="Facebook Arkane Studio" width="50"></a>
         </div>
     </footer>
 
