--- a/PageEnCeMoment.html
+++ b/PageEnCeMoment.html
@@ -45,7 +45,7 @@
             </div>
         </div>
         <div id="Image"></div>
-            <img src="/soon.png">
+            <img src="soon.png">
         </div>
 
     </section>
