--- a/PageEconomie.html
+++ b/PageEconomie.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>économie et écologie Arkane Studios</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="stylesEconomie.css">
 </head>
 <body>
     <header>
