--- a/PageEconomie.html
+++ b/PageEconomie.html
@@ -12,11 +12,11 @@
         </div>
        
         <div id="Navigation">
-                <a href="#">Accueil</a>
-                <a href="#">Présentation de l'entreprise</a>
-                <a href="#">En ce moment</a>
-                <a id="Pageactuelle" href="#">Economie</a>
-                <a href="#">Chiffres</a>
+                <a href="index.html">Accueil</a>
+                <a href="PagePresentation.html">Présentation de l'entreprise</a>
+                <a href="PageEnCeMoment.html">En ce moment</a>
+                <a id="Pageactuelle" href="PageEconomie.html">Economie</a>
+                <a href="PageChiffre.html">Chiffres</a>
         </div>
     </header>
     <section class="page">
