--- a/PageChiffre.html
+++ b/PageChiffre.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Chiffre</title>
+    <title>Chiffres</title>
     <link rel="stylesheet" href="styles_chiffre.css">
 </head>
 
@@ -23,7 +23,8 @@
     </header>
 
     <h1>
-        Les chiffres d'Arkane Studios, vingt ans de jeux vidéo
+        Les chiffres d'Arkane Studios, vingt ans de jeux vidéo<br/>
+        <small><i>Aucun graphique n'est disponible pour le moment.</i></small>
     </h1>
     <br>
         <div class="container">
@@ -37,16 +38,16 @@
                 </ul>
             </div>
             <div class="item">
-                <h3>Effectifs</h3>
-                <p>Arkane Studio compte en 2022, 255 salariés</p> 
+                <h3>Premier Jeu</h3>
+                <p>Arx Fatalis est le <b>premier jeu développé par Arkane Studio</b> <br/> sortie <b>en 2002</b> sur PC puis sur XBOX, genre Aventure/RPG* principalement<br/><br/><i><small>* genre de jeu vidéo s'inspirant des codes et du principe des jeux de rôle sur table</small></i></p> 
             </div>
             <div class="item">
                 <h3>Chiffres Economies</h3>
                     <ul>
                     <li>Chiffre d'affaire</li>
-                    <li>Rentabilité économique</li>
+                    <li>Rentabilitée économique</li>
                     <li>Taux de marge nette</li>
-                    <li>etc...</li>
+                    <li><i>A venir</i></li>
                 </ul>
             </div>
             <div class="item">
@@ -66,13 +67,21 @@
                     <li>RedFall: 2 300 avis <b id="negatif">plutôt négative</b></li>
                 </ul>
             </div>
+            <div class="item">
+                <P><b>Quelques comparaisons</b></P>
+                  <p><i>A venir</i></p>  
+            </div>
+            <div class="item">
+                <P><b>Effectif de l'entreprise</b></P>
+                  <p>Arkane Studio compte <b>255 salariés</b>, en 2022</p>  
+            </div>
         </div>
 
         <footer>
             <div id="copyright">
                 <img src="Logo.png" alt="Logo" width="100" height="50">
                 <br>
-                &copy; 2024 Mathias DUMAIN
+                &copy; 2024 Luca DUSSOL
             </div>
         
             <div>
@@ -90,10 +99,6 @@
             </div>
         </footer>
     
-
-</body>
-
-</html>
 
 </body>
 
