Mise à jour En ce moment
Mise à jour du header
Ajout Article : titre, image et recap

--- a/PageEnCeMoment.html
+++ b/PageEnCeMoment.html
@@ -14,13 +14,14 @@
         </div>
        
         <div id="Navigation">
-                <a href="#">Accueil</a>
-                <a href="#">Présentation de l'entreprise</a>
+                <a href="index.html">Accueil</a>
+                <a href="PagePresentation.html">Présentation de l'entreprise</a>
                 <a id="Pageactuelle" href="#">En ce moment</a>
                 <a href="#">Economie</a>
-                <a href="#">Chiffres</a>
+                <a href="PageChiffre.html">Chiffres</a>
         </div>
     </header>
+    <div style="height: 150px;"></div>
 
 
     <section id="Titre">
@@ -34,13 +35,26 @@
             <div class="article" id="article1">
                 <div class="texte">
                     <h2>Le prochain jeu d'Arkane</h2>
-                    <p>blablablablablablablablablabla </p>
+                    <p>Vous aimez Marvel ? Vous aimez Arkane Studios ? Cela tombe bien car Arkane Studios travaille sur un jeu Marvel ! Blade un héro de Paris devra sauvé la ville d'un grand phénomène... </p>
                 </div>
             </div>
             <div class="article" id="article2">
                 <div class="texte">
-                    <h2>Fermeture des serveurs RedFall !</h2>
-                    <p>blablablablablablablablablabla </p>
+                    <h2>Fermeture des serveurs RedFall</h2>
+                    <p>Vous vous demandez pourquoi les serveurs de RedFall ont fermé et qu'est-ce qui ce passe ? Microsoft ont annoncé de fermé les serveurs RedFall le 7 Mai 2024.</p>
+                </div>
+            </div>
+            
+            <div class="article" id="article3">
+                <div class="texte">
+                    <h2>Licenciement de masse</h2>
+                    <p>Le 25 janvier 2024, Microsoft a annoncé une vague de licenciement avec 1900 employés viré ce qui touche tout les studios de Microsoft dont Arkane Studios. Cela a fait débat dans la communauté.  </p>
+                </div>
+            </div>
+            <div class="article" id="article4">
+                <div class="texte">
+                    <h2>Fermeture du Studio d’Austin </h2>
+                    <p> Le 7 Mai 2024, Le studio d'Austin ferme ses portes avec 96 employés. Cela a une incidence sur le jeu RedFall qui ferme mais aussi sur les employés qui donc doivent retrouvé un nouveau travail.  </p>
                 </div>
             </div>
         </div>
