--- a/PageChiffre.html
+++ b/PageChiffre.html
@@ -17,7 +17,7 @@
                 <a href="index.html">Accueil</a>
                 <a href="PagePresentation.html">Présentation de l'entreprise</a>
                 <a href="PageEnCeMoment.html">En ce moment</a>
-                <a href="#">Economie</a>
+                 <a href="PageEconomie.html">Economie</a>
                 <a id="Pageactuelle" href="#">Chiffres</a>
         </div>
     </header>
