--- a/PageEnCeMoment.html
+++ b/PageEnCeMoment.html
@@ -26,7 +26,7 @@
 
     <section id="Titre">
         <h1>En ce moment</h1>
-        <h3>Sur cette page vous retrouverez les dernières informations d'Arkane sous forme d'article ci dessous</h4>
+        <h3>Sur cette page vous retrouverez les dernières informations d'Arkane sous forme d'article ci dessous</h3>
     </section>
 
     <section id="Contenu">
@@ -58,8 +58,8 @@
                 </div>
             </div>
         </div>
-        <div id="Image"></div>
-            <img src="soon.png">
+        <div id="Image">
+            <img src="soon.png" alt="Image qui annonce que le feed des réseaux sociaux est pour bientôt">
         </div>
 
     </section>
