--- a/PageEconomie.html
+++ b/PageEconomie.html
@@ -12,33 +12,42 @@
         </div>
        
         <div id="Navigation">
-                <a href="index.html">Accueil</a>
-                <a href="PagePresentation.html">Présentation de l'entreprise</a>
-                <a href="PageEnCeMoment.html">En ce moment</a>
-                <a id="Pageactuelle" href="PageEconomie.html">Economie</a>
-                <a href="PageChiffre.html">Chiffres</a>
+            <a href="index.html">Accueil</a>
+            <a href="PagePresentation.html">Présentation de l'entreprise</a>
+            <a href="PageEnCeMoment.html">En ce moment</a>
+            <a id="Pageactuelle" href="PageEconomie.html">Economie</a>
+            <a href="PageChiffre.html">Chiffres</a>
         </div>
     </header>
     <section class="page">
         <section class="economie" >
             <h1>ECONOMIE</h1>
+            <div class="disclaimer">
+                <span>ATTENTION : il est important de noter que toutes les informations présentent sur cette page n'ont pas ete mises a jour depuis 2022.</span>
+            </div>
             <div class="div_container">
                 <div class="eltg">
                     <div class="texte1">
-                        <span>ceci est le premier texte sur l'économie d'arkane studios</span>
-                    </div>
+                        <span>La société Arkane Studios a été créée en octobre 1999, et elle dispose d’un capital social de 181 k€. Elle a réalisé un chiffre d'affaires de 17 M€ en 2020 en s'appuyant sur un effectif de plus de 140 personnes.</span> <!--source:https://www.xerfi.com/etudes-par-entreprise/ARKANE-STUDIOS_424606176-->
+                   </div>
                     <div class="ensemble1">
                         <div class="texte2">
-                            <span>voici un autre texte avec plein d'informations economiques interessantes</span>
+                            <span>La rentabilité financiere de l'entreprise a diminué depuis 2020 en passant de 21,32% en 2020 a 4.48% en 2022 malgré une tres legere hausse en 2021 a 21,50%. dans l'ensemble, l'année 2022 est une année moins bonne que les autres au niveau des performances pour le studio lyonnais comme nous pouvons le voir avec la baisse de sa capacité d'autofinancement de 31,08% en 2021 a 10,02% en 2022 ou encore la diminution de la rentabilité nette finale qui passe de 27,64% en 2021 a 6,52% en 2022</span>
                         </div>
-                        <div class="graph">
-                            <span>second graphe</span>
+                        <div class="graph" id="g2">
+                            <img src="rentabilité_financiere.jpg" alt="graphique de la rentabilité financiere de l'entreprise">
                         </div>
                     </div>
                 </div>
                 <div class="eltd">
-                    <div class="graph">
-                        <span>premier graph</span>
+                    <div class="graph" id="g1">
+                        <img src="graph_chiffre_affaire.jpg" alt="graphique du chiffre d'affaire">
+                    </div>
+                    <div class="texte3">
+                        <span>Ce graphe permet de mesurer l'évolution du chiffre d'affaires et de la rentabilité de l'entreprise.
+                            La rentabilité est mesurée gr?ce à l'Excédent Brut d'Exploitation (EBE) qui, à la différence du Résultat d'Exploitation, 
+                            ne tient pas compte des choix de gestion de l'entreprise (dotations/reprises aux amortissements et transferts de charges). 
+                            </span> <!--source:https://www.societe.com/societe/arkane-studios-424606176.html#__analyse-->
                     </div>
                 </div>
             </div>
