--- a/PageEconomie.html
+++ b/PageEconomie.html
@@ -56,7 +56,13 @@
         <section class="ecologie" >
             <h1>ECOLOGIE</h1>
             <div class="div_container">
-                <span>ceci est le texte sur l'écologie au sein d'Arkane studios</span>
+                <div class="texte_ecolo">
+                    <span>Partage des idéologie et incite ses joueurs a recycler et tente de les sensibiliser a cette idee de recyclage notamment grace a son jeu PREY dans lequel les joueurs peuvent recycler n'importe quel element a n'importe quel moment. Integrer des notions telles que celles ci dans un jeu qui n'a rien a voir avec est une tres bonne idee qui peut sensibiliser beaucoup de joueurs peut importe leur age.   </span>
+                    <div class="img_eco">
+                        <img src="prey.jpg" alt="image jeu prey recyclage">
+    
+                    </div>  
+                </div>
             </div>
 
         </section>
