--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a id="Pageactuelle" href="#">Accueil</a>
                 <a href="PagePresentation">Présentation de l'entreprise</a>
                 <a href="PageEnCeMoment.html">En ce moment</a>
-                <a href="#">Economie</a>
+                <a href="PageEconomie.html">Economie</a>
                 <a href="PageChiffre">Chiffres</a>
         </div>
     </header>
