--- a/PagePresentation.html
+++ b/PagePresentation.html
@@ -69,9 +69,9 @@
             </iframe>
         </div>
         <div>
-            <a class="Reseau" href="LogoFacebook.png" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/b/b9/2023_Facebook_icon.svg"  alt="Image Facebook" width=50px></a>
-            <a class="Reseau" href="LogoX.jpg" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/e/e6/Twitter-new-logo.jpg"  alt="Image X" width=50px></a>
-            <a class="Reseau" href="LogoLinkedin.png" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/174/174857.png"  alt="Image Logo" width=50px></a>
+            <a class="Reseau" href="LogoFacebook.png" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/b/b9/2023_Facebook_icon.svg"  alt="Image Facebook" width="50"></a>
+            <a class="Reseau" href="LogoX.jpg" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/e/e6/Twitter-new-logo.jpg"  alt="Image X" width="50"></a>
+            <a class="Reseau" href="LogoLinkedin.png" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/174/174857.png"  alt="Image Logo" width="50"></a>
         </div>
     </footer>
 
