--- a/PagePresentation.html
+++ b/PagePresentation.html
@@ -27,7 +27,10 @@
             <div class="text-container">
                 <h2>Qui sont-ils ?</h2>
                 <p>
+                    <h3> Origine</h3>
                     Fondé en 1999, Arkane Studios s'est développé pour devenir l'une des équipes de développement les plus reconnues de l'industrie du jeu vidéo. Arkane s'est construit une réputation de créateur de jeux au style unique et à l'action immersive avec une approche artisanale. Les titres du studio, dont Dishonored, Dishonored 2, Prey et DEATHLOOP, ont remporté de nombreuses reconnaissances prestigieuses dans le monde entier, parmi lesquelles plusieurs titres "Game of the Year".
+                    <h3>Les grands jeux</h3>
+                    la franchise Dishonored : les sorties du premier opus (2012), puis de Dishonored 2 (2016) et Dishonored : La Mort de l'Outsider (2017) sont à chaque fois des succès critiques
                 </p>
             </div>
             <div class="images-container">
@@ -40,7 +43,7 @@
         </div>
 
         <div id="texte2">
-            <h1> on  verra </h2>
+            <h1>  </h2>
                 <p>   
                  Fondé en 1999, Arkane Studios s'est développé pour devenir l'une des équipes de développement les plus reconnues de l'industrie du jeu vidéo. Arkane s'est construit une réputation de créateur de jeux au style unique et à l'action immersive avec une approche artisanale. Les titres du studio, dont Dishonored, Dishonored 2, Prey et DEATHLOOP, ont remporté de nombreuses reconnaissances prestigieuses dans le monde entier, parmi lesquelles plusieurs titres "Game of the Year".
                 </p>
@@ -70,6 +73,10 @@
             <a class="Reseau" href="LogoLinkedin.png" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/174/174857.png"  alt="Image Logo" width="50"></a>
         </div>
     </footer>
+
+    
+</body>
+</html>
 
     
 </body>
