--- a/PagePresentation.html
+++ b/PagePresentation.html
@@ -43,9 +43,10 @@
         </div>
 
         <div id="texte2">
-            <h1>  </h2>
+            <h1> Un second studio peu concluant </h2>
                 <p>   
-                 Fondé en 1999, Arkane Studios s'est développé pour devenir l'une des équipes de développement les plus reconnues de l'industrie du jeu vidéo. Arkane s'est construit une réputation de créateur de jeux au style unique et à l'action immersive avec une approche artisanale. Les titres du studio, dont Dishonored, Dishonored 2, Prey et DEATHLOOP, ont remporté de nombreuses reconnaissances prestigieuses dans le monde entier, parmi lesquelles plusieurs titres "Game of the Year".
+                    En 2006, l'équipe de fondateurs ouvre un second studio aux États-Unis, à Austin, qui après avoir collaboré aux projets de l'équipe lyonnaise, développe en son nom propre le thriller dans une station spatiale Prey (2017) et le jeu de tir coopératif Redfall (2023).
+                    Le second Studios est un échec critique et commercial, Microsoft finit par annoncer la fermeture d'Arkane a Austin en mai 2024.
                 </p>
         </div>
     </div>
@@ -73,10 +74,6 @@
             <a class="Reseau" href="LogoLinkedin.png" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/174/174857.png"  alt="Image Logo" width="50"></a>
         </div>
     </footer>
-
-    
-</body>
-</html>
 
     
 </body>
