--- a/PageChiffre.html
+++ b/PageChiffre.html
@@ -5,7 +5,7 @@
     <title>Chiffres</title>
     <link rel="stylesheet" href="styles_chiffre.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
