--- a/PageEconomie.html
+++ b/PageEconomie.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>économie et écologie Arkane Studios</title>
     <link rel="stylesheet" href="stylesEconomie.css">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
