--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
 
         <div class="image">
-            <a href="#"><img src="cone.jpg" 
+            <a href="PageEconomie.html"><img src="cone.jpg" 
                 alt="Environnement économique"
                 height="200" width="355">
     
