--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <div id="Navigation">
                 <a id="Pageactuelle" href="#">Accueil</a>
                 <a href="PagePresentation">Présentation de l'entreprise</a>
-                <a href="PageEnCeMoment.html">En ce moment</a>
-                <a href="PageEconomie.html">Economie</a>
+                <a href="PageEnCeMoment">En ce moment</a>
+                <a href="PageEconomie">Economie</a>
                 <a href="PageChiffre">Chiffres</a>
         </div>
     </header>
@@ -75,7 +75,7 @@
         </div>
 
         <div class="image">
-            <a href="PageChiffre.hmtl"><img src="cone.jpg"
+            <a href="PageChiffre"><img src="cone.jpg"
                 alt="Statistiques sur Arkane Studios"
                 height="200" width="355">
     
