--- a/PageEnCeMoment.html
+++ b/PageEnCeMoment.html
@@ -6,7 +6,7 @@
     <title>En ce moment</title>
     <link rel="stylesheet" href="styles_moment.css">
     <link rel="javascript" href="js_moments.js">
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 <body>
