--- a/PageChiffre.html
+++ b/PageChiffre.html
@@ -19,14 +19,13 @@
                 <a href="index.html">Accueil</a>
                 <a href="PagePresentation.html">Présentation de l'entreprise</a>
                 <a href="PageEnCeMoment.html">En ce moment</a>
-                 <a href="PageEconomie.html">Economie</a>
+                <a href="PageEconomie.html">Economie</a>
                 <a id="Pageactuelle" href="#">Chiffres</a>
         </div>
     </header>
 
     <h1>
-        Les chiffres d'Arkane Studios, vingt ans de jeux vidéo<br/>
-        <small><i>Aucun graphique n'est disponible pour le moment.</i></small>
+        Les chiffres d'Arkane Studios, vingt ans de jeux vidéo
     </h1>
     <br>
         <div class="container">
@@ -41,7 +40,11 @@
             </div>
             <div class="item">
                 <h3>Premier Jeu</h3>
-                <p>Arx Fatalis est le <b>premier jeu développé par Arkane Studio</b> <br/> sortie <b>en 2002</b> sur PC puis sur XBOX, genre Aventure/RPG* principalement<br/><br/><i><small>* genre de jeu vidéo s'inspirant des codes et du principe des jeux de rôle sur table</small></i></p> 
+                <p>
+                    Arx Fatalis est le <b>premier jeu développé par Arkane Studio</b> <br>
+                    sortie <b>en 2002</b> sur PC puis sur XBOX, genre Aventure/RPG* principalement <br>
+                    <i><small>* genre de jeu vidéo s'inspirant des codes et du principe des jeux de rôle sur table</small></i>
+                </p> 
             </div>
             <div class="item">
                 <h3>Chiffres Economies</h3>
@@ -63,10 +66,10 @@
             <div class="item">
                 <P><b>Avis Positifs Steam</b></P>
                 <ul>
-                    <li>Dishonored : 60 000 avis <b id="positif">très positive</b></li>
-                    <li>Prey : 33 000 avis <b id="positif">très positive</b></li>
-                    <li>DeathLoop : 18 000 avis <b id="positif">plutôt positif</b></li>
-                    <li>RedFall: 2 300 avis <b id="negatif">plutôt négative</b></li>
+                    <li>Dishonored : 60 000 avis <b class="positif">très positif</b></li>
+                    <li>Prey : 33 000 avis <b class="positif">très positif</b></li>
+                    <li>DeathLoop : 18 000 avis <b class="positif">plutôt positif</b></li>
+                    <li>RedFall: 2 300 avis <b class="negatif">plutôt négatif</b></li>
                 </ul>
             </div>
             <div class="item">
@@ -100,6 +103,11 @@
                 <a class="Reseau" href="https://www.linkedin.com/company/arkane-studios/" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="Facebook Arkane Studio" width="50"></a>
             </div>
         </footer>
+    
+
+</body>
+
+</html>
     
 
 </body>
