Création bouton + avance popup

--- a/PageEnCeMoment.html
+++ b/PageEnCeMoment.html
@@ -14,7 +14,6 @@
         <div id="logo">
             <img src="Logo.png" alt="Logo" width="300" height="80"> 
         </div>
-       
         <div id="Navigation">
                 <a href="index.html">Accueil</a>
                 <a href="PagePresentation.html">Présentation de l'entreprise</a>
@@ -39,11 +38,18 @@
                     <h2>Le prochain jeu d'Arkane</h2>
                     <p>Vous aimez Marvel ? Vous aimez Arkane Studios ? Cela tombe bien car Arkane Studios travaille sur un jeu Marvel ! Blade un héro de Paris devra sauvé la ville d'un grand phénomène... </p>
                 </div>
+
+                <div>
+                    <button class="bouton" id="bouton1">Voir plus</button>
+                </div>
             </div>
             <div class="article" id="article2">
                 <div class="texte">
                     <h2>Fermeture des serveurs RedFall</h2>
                     <p>Vous vous demandez pourquoi les serveurs de RedFall ont fermé et qu'est-ce qui ce passe ? Microsoft ont annoncé de fermé les serveurs RedFall le 7 Mai 2024.</p>
+                </div>
+                <div>
+                    <button class="bouton" id="bouton2">Voir plus</button>
                 </div>
             </div>
             
@@ -52,11 +58,17 @@
                     <h2>Licenciement de masse</h2>
                     <p>Le 25 janvier 2024, Microsoft a annoncé une vague de licenciement avec 1900 employés viré ce qui touche tout les studios de Microsoft dont Arkane Studios. Cela a fait débat dans la communauté.  </p>
                 </div>
+                <div>
+                    <button class="bouton" id="bouton3">Voir plus</button>
+                </div>
             </div>
             <div class="article" id="article4">
                 <div class="texte">
                     <h2>Fermeture du Studio d’Austin </h2>
                     <p> Le 7 Mai 2024, Le studio d'Austin ferme ses portes avec 96 employés. Cela a une incidence sur le jeu RedFall qui ferme mais aussi sur les employés qui donc doivent retrouvé un nouveau travail.  </p>
+                </div>
+                <div>
+                    <button class="bouton" id="bouton4">Voir plus</button>
                 </div>
             </div>
         </div>
@@ -66,7 +78,12 @@
 
     </section>
 
+    <dialog id="dialog1">
+        <h2>Le prochain jeu d'Arkane</h2>
+        <p>Vous aimez Marvel ? Vous aimez Arkane Studios ? Cela tombe bien car Arkane Studios travaille sur un jeu Marvel ! Blade un héro de Paris devra sauvé la ville d'un grand phénomène...</p>
+        <button id="closeDialog">Close</button>
 
+    </dialog>
 
 
 
