--- a/PageChiffre.html
+++ b/PageChiffre.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Chiffres</title>
     <link rel="stylesheet" href="styles_chiffre.css">
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 
