--- a/PageChiffre.html
+++ b/PageChiffre.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <title>Chiffres</title>
-    <link rel="stylesheet" href="styles_chiffre.css">
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="styles_chiffre.css">
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+        <link rel="icon" href="/favicon.ico" type="image/x-icon">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+        <title>Chiffre</title>
+    </head>
 
 <body>
 
@@ -30,55 +34,72 @@
     <br>
         <div class="container">
             <div class="item">
-                <h3>Récompenses Jeux et Studio</h3>
-                <ul>
-                    <li>DeathLoop : 2 Game Awards 2021</li>
-                    <li>Dishonored : Game Awards 2012, <b>Game of the Year</b></li>
-                    <li>Dishonored 2 : <b>Plus de 100 récompenses</b>, <br>jeu de l'année durant Game Awards 2016</li>
-                    <li><b>Deux oscars</b> du jeu vidéo pour Arkane Studio</li>
-                </ul>
-            </div>
-            <div class="item">
-                <h3>Premier Jeu</h3>
-                <p>
-                    Arx Fatalis est le <b>premier jeu développé par Arkane Studio</b> <br>
-                    sortie <b>en 2002</b> sur PC puis sur XBOX, genre Aventure/RPG* principalement <br>
-                    <i><small>* genre de jeu vidéo s'inspirant des codes et du principe des jeux de rôle sur table</small></i>
-                </p> 
-            </div>
-            <div class="item">
-                <h3>Chiffres Economies</h3>
+                <div class="normal">
+                    <h3>Récompenses Jeux et Studio</h3>
                     <ul>
-                    <li>Chiffre d'affaire</li>
-                    <li>Rentabilitée économique</li>
-                    <li>Taux de marge nette</li>
-                    <li><i>A venir</i></li>
-                </ul>
+                        <li>DeathLoop : 2 Game Awards 2021</li>
+                        <li>Dishonored : Game Awards 2012, <b>Game of the Year</b></li>
+                        <li>Dishonored 2 : <b>Plus de 100 récompenses</b>, <br>jeu de l'année durant Game Awards 2016</li>
+                        <li><b>Deux oscars</b> du jeu vidéo pour Arkane Studio</li>
+                    </ul>
+                </div>
+                <div class="graph">
+                    <img src="Test_graph.png">
+                </div>
             </div>
             <div class="item">
-                <h3> 13 Jeux Développés</h3>
-                <ul>
-                    <li>11 jeux Sorties <b>depuis 2002</b></li>
-                    <li>Un jeu <b>annulé</b></li>
-                    <li>Un en cours de <b>développement</b></li>
-                </ul>
+                <div class="normal">
+                    <h3>Premier Jeu</h3>
+                    <p>
+                        Arx Fatalis est le <b>premier jeu développé par Arkane Studio</b> <br>
+                        sortie <b>en 2002</b> sur PC puis sur XBOX, genre Aventure/RPG* principalement <br> <br>
+                        <i><small>* genre de jeu vidéo s'inspirant des codes et du principe des jeux de rôle sur table</small></i>
+                    </p>
+                </div> 
             </div>
             <div class="item">
-                <P><b>Avis Positifs Steam</b></P>
-                <ul>
-                    <li>Dishonored : 60 000 avis <b class="positif">très positif</b></li>
-                    <li>Prey : 33 000 avis <b class="positif">très positif</b></li>
-                    <li>DeathLoop : 18 000 avis <b class="positif">plutôt positif</b></li>
-                    <li>RedFall: 2 300 avis <b class="negatif">plutôt négatif</b></li>
-                </ul>
+                <div class="normal">
+                    <h3>Chiffres Economies</h3>
+                        <ul>
+                        <li>Chiffre d'affaire : 120 012 026 €</li><br>
+                        <li>Rentabilitée économique : 1 012 €</li><br>
+                        <li>Taux de marge nette : 10 €</li><br>
+                        <li></li>
+                    </ul>
+                </div>
             </div>
             <div class="item">
-                <P><b>Quelques comparaisons</b></P>
-                  <p><i>A venir</i></p>  
+                <div class="normal">
+                    <h3> 13 Jeux Développés</h3>
+                    <ul>
+                        <li>11 jeux Sorties <b>depuis 2002</b></li>
+                        <li>Un jeu <b>annulé</b></li>
+                        <li>Un en cours de <b>développement</b></li>
+                    </ul>
+                </div>
             </div>
             <div class="item">
-                <P><b>Effectif de l'entreprise</b></P>
-                  <p>Arkane Studio compte <b>255 salariés</b>, en 2022</p>  
+                <div class="normal">
+                    <P><b>Avis Positifs Steam</b></P>
+                    <ul>
+                        <li>Dishonored : 60 000 avis <b class="positif">très positif</b></li>
+                        <li>Prey : 33 000 avis <b class="positif">très positif</b></li>
+                        <li>DeathLoop : 18 000 avis <b class="positif">plutôt positif</b></li>
+                        <li>RedFall: 2 300 avis <b class="negatif">plutôt négatif</b></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="item">
+                <div class="normal">
+                    <P><b>Quelques comparaisons</b></P>
+                    <p><i>A venir</i></p>
+                </div>
+            </div>
+            <div class="item">
+                <div class="normal">
+                    <P><b>Effectif de l'entreprise</b></P>
+                    <p>Arkane Studio compte <b>255 salariés</b>, en 2022</p>
+                </div> 
             </div>
         </div>
 
@@ -108,7 +129,6 @@
 </body>
 
 </html>
-    
 
 </body>
 
