--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div>
 
         <div class="image">
-            <a href="8_DUFOSSEZ_économie.pdf"><img src="img_rapport.jpg"
+            <a href="8_DUFOSSEZ_économie.pdf"><img src="img_rapport.JPG"
                 alt="Téléchargement du rapport économique"
                 height="200" width="355">
     
