--- a/PageChiffre.html
+++ b/PageChiffre.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="styles_chiffre.css">
+        <link rel="stylesheet" href="styles_acc.css">
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
         <link rel="icon" href="/favicon.ico" type="image/x-icon">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,7 +16,7 @@
 
     <header id="Bandeau_haut">
         <div id="logo">
-            <img src="Logo.png" alt="Logo" width="300" height="80"> 
+            <img src="Logo.png" alt="Logo" width="300" height="180"> 
         </div>
        
         <div id="Navigation">
@@ -27,6 +27,7 @@
                 <a id="Pageactuelle" href="#">Chiffres</a>
         </div>
     </header>
+
 
     <h1>
         Les chiffres d'Arkane Studios, vingt ans de jeux vidéo
@@ -129,7 +130,6 @@
 </body>
 
 </html>
-
 </body>
 
 </html>
