--- a/PagePresentation.html
+++ b/PagePresentation.html
@@ -25,15 +25,15 @@
 
         <div class="container">
             <div class="text-container">
-                <h2>Qui sont-ils ?</h2>
+                <h1>Qui sont-ils ?</h1>
                 <p>
-                    <h3> Origine</h3>
+                    <h2> Origine :</h2>
                     En 1999, Arkane Studios, composé de seulement 5 ou 6 employés, est une société française localisée à Lyon et spécialisée dans le domaine des jeux vidéo. Cette année-là, bien que les membres d’Arkane n’aient encore rien proposé, ils travaillent déjà sur leur premier jeu. C’est en 2002 que sort leur premier jeu, Arx Fatalis, qui deviendra par la suite une source d’inspiration pour les productions futures. Ce premier titre est un franc succès et permet à l'entreprise de se faire un nom dès les années 2000-2010 dans le domaine des jeux dits "immersive sims". Dès 2006, le succès rencontré par le studio leur permet d’ouvrir un second studio, cette fois-ci à Austin.
                     <hr>
-                    <h3> Une période difficile</h3>
-                    Néanmoins, de 2007 à 2010, Arkane Studios traverse une période difficile. En effet, pendant cette période, Arkane travaille sur de nombreux projets qui ne verront jamais le jour, comme The Crossing, ce qui pousse le studio à se lancer dans des activités de prestation. Ils travaillent alors sur divers jeux et apparaissent dans les crédits de plusieurs titres, tels que Bioshock 2, Call of Duty: World at War ou encore Spec Ops: The Line. En 2008, Electronic Arts annonce la fin de leur collaboration, entamée en 2006, pour le développement de The Crossing.
-                    <hr>
-                    <h3> Rachat et projets</h3>
+                    <h1> Arkane Studio au service des autres ?</h1>
+                    <h2> Une période difficile :</h2>
+                    De 2007 à 2010, Arkane Studios traverse une période difficile. En effet, pendant cette période, Arkane travaille sur de nombreux projets qui ne verront jamais le jour, comme The Crossing, ce qui pousse le studio à se lancer dans des activités de prestation. Ils travaillent alors sur divers jeux et apparaissent dans les crédits de plusieurs titres, tels que Bioshock 2, Call of Duty: World at War ou encore Spec Ops: The Line. En 2008, Electronic Arts annonce la fin de leur collaboration, entamée en 2006, pour le développement de The Crossing.
+                    <h2> Rachat et projets :</h2>
                     En 2010, le studio est racheté par Bethesda (Zenimax) et c’est en 2012 que sort Dishonored, leur premier jeu sous cette nouvelle direction. Ce titre est un succès critique auprès des joueurs et permet à l'entreprise de gagner en notoriété. La trilogie Dishonored occupera Arkane Studios jusqu’en 2017. La même année, un autre jeu, Prey, sort et rencontre lui aussi un franc succès. Ce titre, s’éloignant du concept de Dishonored, permet à l'entreprise d'attirer un public plus large. En 2020, Microsoft décide de racheter Zenimax et tous les studios affiliés, dont Arkane, pour 7,5 milliards de dollars. En 2023 sort le jeu Redfall, un énorme échec commercial qui remet en question les capacités de Microsoft en tant qu'éditeur. À la suite de cet échec, Microsoft fermera, le 7 mai 2024, le studio d’Austin ainsi que d'autres studios liés à Zenimax, tandis que le studio de Lyon travaille toujours sur un jeu basé sur le super-héros Blade de l’univers Marvel.
 
             </div>
@@ -46,7 +46,7 @@
                     <div id="texte2">  
                         <h2> Quelques informations sur Arkane : </h2>
                             <p>   
-                                fondateur : Raphaël Colantonio
+                                <strong>Fondateur </strong> : Raphaël Colantonio
                                 <br> <br>
                                 <strong>membre important:</strong>
                                 <ul>
