Test poids site

--- a/PageEnCeMoment.html
+++ b/PageEnCeMoment.html
@@ -11,7 +11,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-        <title>Titre Page</title>
+        <title> En ce Moment </title>
     </head>
 <body>
     <header id="Bandeau_haut">
@@ -82,7 +82,8 @@
 
     </section>
 
-    <rssapp-wall id="DhwB0uiyCKcA7r5F"></rssapp-wall><script src="https://widget.rss.app/v1/wall.js" type="text/javascript" async></script>
+    <!-- <rssapp-wall id="DhwB0uiyCKcA7r5F"></rssapp-wall><script src="https://widget.rss.app/v1/wall.js" type="text/javascript" async></script> -->
+    
     <dialog id="dialog1">
         <h2>Le prochain jeu d'Arkane</h2>
         <p>Vous aimez Marvel ? Vous aimez Arkane Studios ? Cela tombe bien car Arkane Studios travaille sur un jeu Marvel ! Blade un héro de Paris devra sauvé la ville d'un grand phénomène...</p>
